name:          vector
version:       0.0.1
synopsis:      Dependently-typed linked list implementation
license:       MIT
license-file:  LICENSE
author:        Daniel Cartwright
maintainer:    chessai1996@gmail.com
copyright:     Daniel Cartwright
category:      Data
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules: Vector
  build-depends: base >= 4.9
  hs-source-dirs: src
  default-language: Haskell2010

executable vector:
  main-is: Vector.hs
  build-depends:
      base >= 4.9
    , vector
  hs-source-dirs: src
  default-language: Haskell2010
